--- a/projects/vs/sonia-prime/sonia-prime.vcxproj
+++ b/projects/vs/sonia-prime/sonia-prime.vcxproj
@@ -23,6 +23,9 @@
     <ClCompile Include="..\..\..\sonia\services\basic_service_factory.cpp" />
     <ClCompile Include="..\..\..\sonia\services\environment.cpp" />
     <ClCompile Include="..\..\..\sonia\services\local_service_registry.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\prime_bundle.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\scheduler\scheduler_builder.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\scheduler\scheduler_service.cpp" />
     <ClCompile Include="..\..\..\sonia\services\services.cpp" />
     <ClCompile Include="..\..\..\sonia\services\services_host.cpp" />
     <ClCompile Include="..\..\..\sonia\services\service_locator.cpp" />
@@ -33,9 +36,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\sonia\services\bundle.hpp" />
     <ClInclude Include="..\..\..\sonia\services\environment.hpp" />
     <ClInclude Include="..\..\..\sonia\services\host.hpp" />
     <ClInclude Include="..\..\..\sonia\services\local_service_registry.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_builder.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_configuration.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\scheduler\scheduler_service.hpp" />
     <ClInclude Include="..\..\..\sonia\services\service.hpp" />
     <ClInclude Include="..\..\..\sonia\services\service_factory.hpp" />
     <ClInclude Include="..\..\..\sonia\services\service_locator.hpp" />
@@ -116,7 +123,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;SONIA_PRIME_EXPORTS;BOOST_LOG_DYN_LINK;BOOST_ALL_DYN_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;SONIA_PRIME_EXPORTS;BOOST_LOG_DYN_LINK;BOOST_ALL_DYN_LINK;BOOST_FIBERS_STATIC_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\;$(SolutionDir)..\..\bundles</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -176,7 +183,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;SONIA_PRIME_EXPORTS;BOOST_LOG_DYN_LINK;BOOST_ALL_DYN_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;SONIA_PRIME_EXPORTS;BOOST_LOG_DYN_LINK;BOOST_ALL_DYN_LINK;BOOST_FIBERS_STATIC_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)..\..\..\;$(SolutionDir)..\..\bundles</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
