--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -51,12 +51,16 @@
     <ClInclude Include="..\..\..\sonia\reference_wrapper.hpp" />
     <ClInclude Include="..\..\..\sonia\sal.hpp" />
     <ClInclude Include="..\..\..\sonia\scheduler\basic_scheduler.hpp" />
+    <ClInclude Include="..\..\..\sonia\scheduler\test_fiber_mutex.hpp" />
+    <ClInclude Include="..\..\..\sonia\scheduler\fiber_work_stealing_scheduler.hpp" />
     <ClInclude Include="..\..\..\sonia\scheduler\scheduler.hpp" />
     <ClInclude Include="..\..\..\sonia\serialization\boost_serialization_tuple.hpp" />
+    <ClInclude Include="..\..\..\sonia\serialization\command.hpp" />
     <ClInclude Include="..\..\..\sonia\serialization\integral.hpp" />
     <ClInclude Include="..\..\..\sonia\serialization\iostream.hpp" />
     <ClInclude Include="..\..\..\sonia\serialization\json_serialization.hpp" />
     <ClInclude Include="..\..\..\sonia\serialization\serialization.hpp" />
+    <ClInclude Include="..\..\..\sonia\serialization\type_durable_id.hpp" />
     <ClInclude Include="..\..\..\sonia\services.hpp" />
     <ClInclude Include="..\..\..\sonia\services\async\reactor.hpp" />
     <ClInclude Include="..\..\..\sonia\services\builder.hpp" />
@@ -70,19 +74,25 @@
     <ClInclude Include="..\..\..\sonia\shared_ptr.hpp" />
     <ClInclude Include="..\..\..\sonia\string.hpp" />
     <ClInclude Include="..\..\..\sonia\thread.hpp" />
-    <ClInclude Include="..\..\..\sonia\type_info.hpp" />
+    <ClInclude Include="..\..\..\sonia\thread\rw_fiber_mutex.hpp" />
     <ClInclude Include="..\..\..\sonia\type_traits.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\basic_local_registry.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\bind.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\bind_command.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\buffer.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\command.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\comparison_operators.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\explicit_operator_bool.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\file_persister.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\iterators\hash_combine_iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\json\json_cast.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\json\value.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\multimethod.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\number\basic_decimal.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\number\decimal.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\number\decimal.ipp" />
     <ClInclude Include="..\..\..\sonia\utility\number\integer.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\on_close.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\optimized\decimal.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\optimized\holder.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\optimized\integer.hpp" />
@@ -108,7 +118,17 @@
     <ClInclude Include="..\..\..\sonia\utility\polymorphic_traits.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\object_pool.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\range\combine.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\range\hasher.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\range\transform.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\scope_exit.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\serialization_fwd.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\simple_queue.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex_ext.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\thread\spinlock_trier.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\type_durable_id.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\type_id.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\type_info.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\variadic.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\windows.hpp" />
   </ItemGroup>
@@ -124,6 +144,7 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\sal\windows_sal.cpp" />
     <ClCompile Include="..\..\..\sonia\scheduler\basic_scheduler.cpp" />
+    <ClCompile Include="..\..\..\sonia\scheduler\fiber_work_stealing_scheduler.cpp" />
     <ClCompile Include="..\..\..\sonia\services\async\async_reactor.cpp" />
     <ClCompile Include="..\..\..\sonia\services\bundle.cpp" />
     <ClCompile Include="..\..\..\sonia\services\environment.cpp">
