--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -64,6 +64,15 @@
     <Filter Include="sonia.sal">
       <UniqueIdentifier>{51847fa8-f43c-46c8-8939-7d494d843269}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sonia.thread">
+      <UniqueIdentifier>{2190df41-1de2-4abc-bd0a-b98dc5b37467}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\thread">
+      <UniqueIdentifier>{de59bf45-ac48-45e2-be5e-c0fcd98b36c1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.utility\serialization">
+      <UniqueIdentifier>{f850a6ea-5dc1-447c-ab9c-167b7918cdec}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\sonia\shared_ptr.hpp">
@@ -327,9 +336,6 @@
     <ClInclude Include="..\..\..\sonia\utility\json\json_cast.hpp">
       <Filter>sonia.utility\json</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\type_info.hpp">
-      <Filter>sonia</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\parameters\parameters.hpp">
       <Filter>sonia.utility\parameters</Filter>
     </ClInclude>
@@ -341,6 +347,69 @@
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\services\bundle.ipp">
       <Filter>sonia.services</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\scheduler\fiber_work_stealing_scheduler.hpp">
+      <Filter>sonia.scheduler</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\scheduler\test_fiber_mutex.hpp">
+      <Filter>sonia.scheduler</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\simple_queue.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\type_id.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\explicit_operator_bool.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\on_close.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\type_durable_id.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\basic_local_registry.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\thread\rw_fiber_mutex.hpp">
+      <Filter>sonia.thread</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex.hpp">
+      <Filter>sonia.utility\thread</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\thread\spinlock_trier.hpp">
+      <Filter>sonia.utility\thread</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex_ext.hpp">
+      <Filter>sonia.utility\thread</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\command.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\serialization\command.hpp">
+      <Filter>sonia.serialization</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\multimethod.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\type_info.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\range\hasher.hpp">
+      <Filter>sonia.utility\range</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\range\transform.hpp">
+      <Filter>sonia.utility\range</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\serialization\type_durable_id.hpp">
+      <Filter>sonia.serialization</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\serialization\serialization_fwd.hpp">
+      <Filter>sonia.utility\serialization</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\bind_command.hpp">
+      <Filter>sonia.utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -409,6 +478,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\services\bundle.cpp">
       <Filter>sonia.services</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\scheduler\fiber_work_stealing_scheduler.cpp">
+      <Filter>sonia.scheduler</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
