--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -54,13 +54,6 @@
     <ClInclude Include="..\..\..\sonia\scheduler\test_fiber_mutex.hpp" />
     <ClInclude Include="..\..\..\sonia\scheduler\fiber_work_stealing_scheduler.hpp" />
     <ClInclude Include="..\..\..\sonia\scheduler\scheduler.hpp" />
-    <ClInclude Include="..\..\..\sonia\serialization\boost_serialization_tuple.hpp" />
-    <ClInclude Include="..\..\..\sonia\serialization\command.hpp" />
-    <ClInclude Include="..\..\..\sonia\serialization\integral.hpp" />
-    <ClInclude Include="..\..\..\sonia\serialization\iostream.hpp" />
-    <ClInclude Include="..\..\..\sonia\serialization\json_serialization.hpp" />
-    <ClInclude Include="..\..\..\sonia\serialization\serialization.hpp" />
-    <ClInclude Include="..\..\..\sonia\serialization\type_durable_id.hpp" />
     <ClInclude Include="..\..\..\sonia\services.hpp" />
     <ClInclude Include="..\..\..\sonia\services\async\reactor.hpp" />
     <ClInclude Include="..\..\..\sonia\services\builder.hpp" />
@@ -120,8 +113,16 @@
     <ClInclude Include="..\..\..\sonia\utility\range\combine.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\range\hasher.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\range\transform.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\rvalue.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\scope_exit.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\boost_serialization_tuple.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\command.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\integral.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\iostream.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\json_serialization.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\serialization.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\serialization\serialization_fwd.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\type_durable_id.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\simple_queue.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\thread\rw_fiber_mutex_ext.hpp" />
